# evince-synctex

./: .gitignore  evince_synctex.py  pyproject.toml
